base-installer (1.89) UNRELEASED; urgency=low

  [ Martin Michlmayr ]
  * Add a cpuinfo file from QNAP TS-109 (orion) to the test suite.
  * Mark the orion flavour as unusable on non-Orion systems.

 -- Martin Michlmayr <tbm@cyrius.com>  Sat, 16 Feb 2008 10:54:15 +0100

base-installer (1.88) unstable; urgency=low

  [ Joey Hess ]
  * Demote Transmeta Crusoe systems to use the 486 kernel.
    Based on #464962, Crusoe lacks support for a long NOP instruction,
    which gcc has begun using when optimising for the 686.

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 10:48:39 -0200

base-installer (1.87) unstable; urgency=low

  [ Christian Perrier ]
  * Add a dependency on ${misc:Depends} for base-installer so that it
    depends properly on debconf.

  [ Aurelien Jarno ]
  * Add support for the MIPS Malta platform.

  [ Colin Watson ]
  * Silence syslog noise if /usr/lib/base-installer.d or
    /usr/lib/post-base-installer.d is empty.

  [ Frans Pop ]
  * Whitespace cleanup: reduce indentation in kernel selection scripts.
  * Update kernel tests for i386 and powerpc.
  * Change kernel usability tests for all arches so that by default any
    postfix is allowed, but only when separated from the flavor by a hyphen.
    This allows both standard postfixes (e.g. -smp) postfixes for custom built
    images, and is used to support updated kernel meta packages for stable.
  * mips/mipsel: allow fallback to 4kc-malta kernel for 5kc-malta.
  * Add hack that allows default selection of kernel meta packages with a
    postfix added to the name through preseeding, for example to support
    selection of updated kernels for stable.

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Korean (ko.po) by Changwoo Ryu