@@ -11,7 +11,7 @@ arch_get_kernel () {
 	imgbase=linux-image
 	version=$KERNEL_MAJOR-alpha
 	
-	if [ -n "$NUMCPUS" ] && [ "$NUMCPUS" -gt 1 ]; then
+	if [ "$NUMCPUS" ] && [ "$NUMCPUS" -gt 1 ]; then
 		echo "$imgbase-$version-smp"
 	fi
 	
