@@ -1,5 +1,6 @@
 cpuinfo b180.cpuinfo
 machine parisc
+numcpus 1
 majors 2.6
 flavour parisc
 kernel-2.6 linux-image-2.6-parisc
